# retail_bigdata_project

./: .gitignore  Dockerfile  README.md  lightgbm_model.pkl  main.py  pyproject.toml  pyspark_analiz.ipynb
.github/workflows/: backend-deploy.yml  deploy.yml  frontend-deploy.yml
frontend/: Dockerfile  index.html
